# workshop-api

./: .gitignore  Cargo.toml  Makefile.toml  Shuttle.toml
api/lib/: Cargo.toml
api/lib/src/: health.rs
api/lib/src/film_repository/: mod.rs
api/shuttle/: Cargo.toml
api/shuttle/src/: main.rs
front/: Cargo.toml  package-lock.json  tailwind.config.js
front/public/: bcnrust.png.br  devbcn.png.br  image3.png.br  tailwind.css  tailwind.css.br
front/src/: main.rs
front/src/components/: film_card.rs  film_modal.rs  footer.rs  header.rs
shared/: Cargo.toml
