[package]
name = "api-lib"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
actix-rt = "2.0.0"


[dependencies]
# actix
actix-web = "4.9.0"
# database
sqlx = { version = "0.7.4", default-features = false, features = [
    "tls-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
# tracing
tracing = "0.1"
shared = { path = "../../shared"}
# serde
serde = "1.0"
serde_json = "1.0"
# utils
async-trait = "0.1.82"
uuid = { version = "1.3.4", features = ["serde", "v4", "js"] }

